add connect rpc endpoint, move delete endpoint
